--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -41,7 +41,7 @@
     max-width: 600px;
   }
   .page-header__logo {
-    height: 30px;
+    height: 31px;
     margin: 0;
     margin-top: 3px;
   }
