--- a/source/sass/blocks/testimonial-card.scss
+++ b/source/sass/blocks/testimonial-card.scss
@@ -118,7 +118,7 @@
     width: 100%;
     height: 104px;
     margin-right: 0;
-    margin-bottom: 19px;
+    margin-bottom: 20px;
   }
   .testimonial-card__text {
     width: 100%;
@@ -126,7 +126,7 @@
   .testimonial-card blockquote {
     height: 84px;
     overflow: hidden;
-    margin: 11px 10px;
+    margin: 13px 10px 8px 11px;
   }
 }
 
